Add debug display to check URL params from LIFF

--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,9 @@
   </style>
 </head>
 <body>
+  <!-- デバッグ表示（後で削除） -->
+  <div id="debug" style="position:fixed;top:0;left:0;right:0;background:#fef3c7;padding:8px;font-size:12px;z-index:9999;display:none;"></div>
+
   <!-- 選択画面 -->
   <div id="selection">
     <h1>今日はどんな1日だった？</h1>
@@ -263,14 +266,21 @@
     let currentCharacter = null;
 
     // URLパラメータチェック（LINE Flex Messageから直接来た場合）
-    (function() {
+    window.addEventListener('DOMContentLoaded', function() {
+      // URLとハッシュ両方をチェック
       const params = new URLSearchParams(window.location.search);
-      const mood = params.get('mood');
+      const hashParams = new URLSearchParams(window.location.hash.replace('#', '?'));
+      const mood = params.get('mood') || hashParams.get('mood');
+
+      // デバッグ表示
+      var debugEl = document.getElementById('debug');
+      debugEl.style.display = 'block';
+      debugEl.textContent = 'URL: ' + window.location.href + ' | mood: ' + (mood || 'なし');
+
       if (mood && ['happy', 'normal', 'sad'].includes(mood)) {
-        // 少し遅延してから結果表示（画像読み込みのため）
-        setTimeout(() => selectMood(mood), 100);
+        setTimeout(() => selectMood(mood), 300);
       }
-    })();
+    });
 
     function selectMood(mood) {
       // ランダムにキャラクター選択
