--- a/public/index.html
+++ b/public/index.html
@@ -182,25 +182,25 @@
   </div>
 
   <script>
-    // キャラクターデータ
+    // キャラクターデータ（音声設定を自然に調整）
     const CHARACTERS = {
       uncle: {
         name: '昭和のおっちゃん',
         image: 'img/img4.png',
-        pitch: 0.8,
-        rate: 1.1
+        pitch: 0.9,
+        rate: 1.0
       },
       auntie: {
         name: '世話焼きのおばちゃん',
         image: 'img/img5.png',
-        pitch: 1.2,
-        rate: 0.9
+        pitch: 1.1,
+        rate: 0.95
       },
       fortune: {
         name: '謎の占い師',
         image: 'img/img6.png',
-        pitch: 0.6,
-        rate: 0.8
+        pitch: 0.85,
+        rate: 0.9
       }
     };
 
@@ -318,9 +318,15 @@
       utterance.lang = 'ja-JP';
       utterance.pitch = currentCharacter.pitch;
       utterance.rate = currentCharacter.rate;
+      utterance.volume = 1.0;
 
       const voices = window.speechSynthesis.getVoices();
-      const jpVoice = voices.find(v => v.lang === 'ja-JP' || v.lang === 'ja_JP');
+      // 高品質な日本語音声を優先（Kyoko, Otoya, Google日本語）
+      let jpVoice = voices.find(v => v.name.includes('Kyoko'));
+      if (!jpVoice) jpVoice = voices.find(v => v.name.includes('Google') && v.lang.startsWith('ja'));
+      if (!jpVoice) jpVoice = voices.find(v => v.name.includes('Otoya'));
+      if (!jpVoice) jpVoice = voices.find(v => v.lang === 'ja-JP' || v.lang === 'ja_JP');
+
       if (jpVoice) utterance.voice = jpVoice;
 
       window.speechSynthesis.speak(utterance);
